buildscript {
    repositories {
        mavenCentral()
    	mavenLocal()
        maven {
            name = "forge"
            url = "https://maven.minecraftforge.net/"
        }
    }
    dependencies {
    	classpath 'net.minecraftforge.gradle:ForgeGradle:2.2.5'
    }
}
apply plugin: 'net.minecraftforge.gradle.forge'

//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.


version = "0.0.1-Alpha"
group = "me.creepinson.main" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = "essenceplus"

sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
compileJava {
    sourceCompatibility = targetCompatibility = "1.8"
}
tasks.withType(Test) {
    maxHeapSize = "512m"
    jvmArgs "-XX:MaxPermSize=512m"
}
minecraft {
    version = "1.11.2-13.20.0.2315"
    runDir = "run"

    // the mappings can be changed at any time, and must be in the following format.
    // snapshot_YYYYMMDD   snapshot are built nightly.
    // stable_#            stables are built at the discretion of the MCP team.
    // Use non-default mappings at your own risk. they may not always work.
    // simply re-run your setup task after changing the mappings to update your workspace.
    mappings = "snapshot_20161220"
    clientJvmArgs += [
        "-Dminecraft.api.auth.host=https://mojang.com",
        "-Dminecraft.api.account.host=https://mojang.com",
        "-Dminecraft.api.session.host=https://mojang.com",
        "-Dhttp.protocols=TLSv1.2"
    ]
    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
}

dependencies {
    // you may put jars on which you depend on in ./libs
    // or you may define them like so..
    //compile "some.group:artifact:version:classifier"
    //compile "some.group:artifact:version"

    // real examples
    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env

    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
    // except that these dependencies get remapped to your current MCP mappings
    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // for more info...
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html

}

processResources {
    // this will ensure that this task is redone when the versions change.
    inputs.property "version", project.version
    inputs.property "mcversion", project.minecraft.version

    // replace stuff in mcmod.info, nothing else
    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'

        // replace version and mcversion
        expand 'version':project.version, 'mcversion':project.minecraft.version
    }

    // copy everything else except the mcmod.info
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}
// Intercept and patch ForgeGradle 2.2 asset downloads to use HTTPS
tasks.withType(net.minecraftforge.gradle.tasks.DownloadAssetsTask) {
    doFirst {
        // 1. Fix the main base URL string inside the task
        try {
            def baseUrlField = it.getClass().getDeclaredField("base_url")
            baseUrlField.setAccessible(true)
            if (baseUrlField.get(it) == "http://resources.download.minecraft.net/") {
                baseUrlField.set(it, "https://resources.download.minecraft.net/")
                logger.lifecycle(" patched ForgeGradle primary asset URL to HTTPS")
            }
        } catch (Exception e) {
            logger.warn("Could not patch base_url via reflection: " + e.getMessage())
        }

        // 2. Fix the individual asset atomic entries mapped inside the task
        if (it.hasProperty('assets')) {
            it.assets.each { entry ->
                def asset = entry.value
                if (asset.hasProperty('url') && asset.url.startsWith("http://")) {
                    asset.url = asset.url.replace("http://", "https://")
                }
            }
        }
    }
}
